# httpserve

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: build-push-docker.yaml
src/: main.rs  mmapped_cache.rs
