[package]
name = "httpserve"
version = "0.3.0"
authors = ["James Guthrie <james@prodigi.ch>"]
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
hyper = { version = "1.9.0", features = ["full"] }
hyper-util = { version = "0.1.20", features = ["server", "server-graceful", "server-auto"] }
http-body-util = "0.1.3"
log = "0.4.14"
simplelog = "0.12.2"
time = "0.3.47"
tokio = { version = "1", features = ["full"] }
